--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body {
 }
 
 .section-bgColor {
-    background-image: linear-gradient(to bottom right, #7ac29f, #253d3d, #104524);
+    background-image: linear-gradient(to bottom right, #0fa4af, #253d3d, #003135);
 }
 .section-revbgColor {
-    background-image: linear-gradient(to bottom left, #104524, #253d3d, #7ac29f);
+    background-image: linear-gradient(to bottom left, #003135, #253d3d, #0fa4af);
     
 }
 
@@ -43,6 +43,7 @@ body {
     top: 40%;
     left: 40%;
     font-size: 4vw;
+    color: #fafad2;
 }
 
 .big-head {
@@ -50,8 +51,21 @@ body {
     font-size: 6vw;
     top: 57%;
     left: 50%;
-    color: rgba(0, 0, 0, 0.1);
+    color: rgba(250, 250, 210, 0.15);
     transform: translate(-50%, -50%);
     z-index: -10;
     font-weight: 900;
 }
+
+.nav-item{
+    color: #333;
+}
+
+.nav-item:hover {
+    color: #289fa1;
+}
+
+.link-active {
+    color: #289fa1;
+    font-weight: bold;
+  }
